<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="horizontal">

    <Button
        android:id="@+id/home"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/home"
        android:textColor="@color/black"
        app:iconTint="#132C17" />

    <Button
        android:id="@+id/trades"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/trades"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/boot"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/bootAlgo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_pool"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:text="@string/pool" />

    <Button
        android:id="@+id/button_staking"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_staking"
        android:textColor="@color/black" />

</LinearLayout>