<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            />

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_balance" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createBot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_boot" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="520dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/name_boot"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="520dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="Trend"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="520dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="Activity"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="Result"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <Button
            android:id="@+id/trades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trades" />

        <Button
            android:id="@+id/boot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bootAlgo" />

        <Button
            android:id="@+id/wallet"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="@string/pool" />

        <Button
            android:id="@+id/button_stayking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stayking"/>

    </LinearLayout>

</LinearLayout>